--- a/style.css
+++ b/style.css
@@ -109,6 +109,16 @@ a.button1{
   height: 100%;
 }
 
+#comic10{
+  width: 100%;
+  height: 100%;
+}
+
+#comic11{
+  width: 100%;
+  height: 100%;
+}
+
 .mybtn2{
   display: flex;
   justify-content: center;
@@ -146,6 +156,22 @@ a.cbtn-m{
     color:#000000;
     background-color:#575757;
     }
+
+    .scrollBottom{
+      padding:0.35em 1.2em;
+      border-radius:0.12em;
+      text-decoration:none;
+      color:#020202;
+      text-align:center;
+      transition: all 0.2s;
+      background-color: #ddd;
+      cursor: pointer;
+      }
+  
+    .scrollBottom:hover{
+      color:#000000;
+      background-color:#575757;
+      }
 
   footer{
     color: #bebebe;
