--- a/style.css
+++ b/style.css
@@ -179,4 +179,9 @@ a.cbtn-m{
     font-weight: light;
   }
 
-@media (maxx-width: 1240px)
+@media (maxx-width: 1240px){
+  #comic1, #comic2, #comic3, #comic4, #comic5, #comic6, #comic7, #comic8, #comic9, #comic10, #comic11{
+  max-width: 100%;
+  max-height: 100%;
+}
+}
