--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ a.cbtn-m{
 
 @media (maxx-width: 1240px){
   #comic1, #comic2, #comic3, #comic4, #comic5, #comic6, #comic7, #comic8, #comic9, #comic10, #comic11{
-  max-width: 100%;
-  max-height: 100%;
+  width: 300px;
+  height: 300px;
 }
 }
