--- a/style.css
+++ b/style.css
@@ -179,9 +179,9 @@ a.cbtn-m{
     font-weight: light;
   }
 
-@media (min-width: 2440px){
+@media (min-width: 100em){
   #comic1{
-  width: 100%;
-  height: 100%;
+  width: 600px;
+  height: 600px;
 }
 }
